[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://fonts/hack.tres" type="FontFile" id=5]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Options" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -253.0
offset_bottom = 253.0
theme_override_constants/separation = 64

[node name="ResolutionContainer" type="HBoxContainer" parent="Options"]
offset_right = 1920.0
offset_bottom = 30.0

[node name="Resolution" type="Label" parent="Options/ResolutionContainer"]
offset_right = 180.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 5 )
text = "Resolution: "

[node name="OptionButton" type="OptionButton" parent="Options/ResolutionContainer"]
offset_left = 184.0
offset_right = 1920.0
offset_bottom = 30.0
size_flags_horizontal = 3

[node name="FullscreenContainer" type="HBoxContainer" parent="Options"]
offset_top = 94.0
offset_right = 1920.0
offset_bottom = 124.0

[node name="Label" type="Label" parent="Options/FullscreenContainer"]
offset_right = 165.0
offset_bottom = 30.0
size_flags_vertical = 5
theme_override_fonts/font = ExtResource( 5 )
text = "Fullscreen:"
align = 1
valign = 1

[node name="FullScreenToggle" type="CheckBox" parent="Options/FullscreenContainer"]
offset_left = 169.0
offset_right = 193.0
offset_bottom = 30.0

[node name="FXAAContainer" type="HBoxContainer" parent="Options"]
offset_top = 188.0
offset_right = 1920.0
offset_bottom = 218.0

[node name="Label" type="Label" parent="Options/FXAAContainer"]
offset_right = 75.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 5 )
text = "FXAA:"

[node name="FXAACheck" type="CheckBox" parent="Options/FXAAContainer"]
offset_left = 79.0
offset_right = 103.0
offset_bottom = 30.0

[node name="VsyncContainer" type="HBoxContainer" parent="Options"]
offset_top = 282.0
offset_right = 1920.0
offset_bottom = 312.0

[node name="Label" type="Label" parent="Options/VsyncContainer"]
offset_right = 90.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 5 )
text = "VSYNC:"

[node name="VSYNCHECK" type="CheckBox" parent="Options/VsyncContainer"]
offset_left = 94.0
offset_right = 118.0
offset_bottom = 30.0

[node name="MSAA" type="HBoxContainer" parent="Options"]
offset_top = 376.0
offset_right = 1920.0
offset_bottom = 406.0

[node name="Label" type="Label" parent="Options/MSAA"]
offset_right = 75.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 5 )
text = "MSAA:"

[node name="MSAASlider" type="HSlider" parent="Options/MSAA"]
offset_left = 79.0
offset_right = 1920.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
tick_count = 4
ticks_on_borders = true

[node name="Button" type="Button" parent="Options"]
offset_top = 470.0
offset_right = 1920.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource( 5 )
text = "Back"

[connection signal="item_selected" from="Options/ResolutionContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Options/FullscreenContainer/FullScreenToggle" to="." method="_on_FullScreenToggle_toggled"]
[connection signal="toggled" from="Options/FXAAContainer/FXAACheck" to="." method="_on_FXAACheck_toggled"]
[connection signal="toggled" from="Options/VsyncContainer/VSYNCHECK" to="." method="_on_VSYNCHECK_toggled"]
[connection signal="value_changed" from="Options/MSAA/MSAASlider" to="." method="_on_MSAASlider_value_changed"]
[connection signal="pressed" from="Options/Button" to="." method="_on_Button_pressed"]
